--- a/index.html
+++ b/index.html
@@ -2,74 +2,116 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Home</title>
 
-    <!-- font awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
-        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous" />
+  <!-- font awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous" />
 
-    <!-- main style -->
-    <link rel="stylesheet" href="./assets/css/main.css" />
+  <!-- main style -->
+  <link rel="stylesheet" href="./assets/css/main.css" />
 
-    <!-- home style -->
-    <link rel="stylesheet" href="./assets/css/home.css" />
+  <!-- home style -->
+  <link rel="stylesheet" href="./assets/css/home.css" />
 
 </head>
 
 <body>
-    <!-- <header class="header">
-        <div class="contact-info">
-            <div class="container">
-                <div class="row text-light">
-                    <div class="col-3">
-                        <span class="phone-number">(00) 875 784 5682</span>
-
-                    </div>
-                    <div class="col-3">
-                        <span class="email-info"> pacargoifo@gmail.com</span>
-
-                    </div>
-                    <div class="col-3">
-                        <span class="adress-info">238, Arimantab, Moska - USA</span>
-
-                    </div>
-
-                    <div class="col-3">
-                        <div class="social-media row align-item-center">
-                            <div class="col-1">
-                                <i class="fa-brands fa-facebook-f"></i>
-                            </div>
-                            <div class="col-1">
-
-                                <i class="fa-brands fa-instagram"></i>
-                            </div>
-                            <div class="col-1">
-                                <i class="fa-brands fa-linkedin-in"></i>
-                            </div>
-                            <div class="col-1">
-                                <i class="fa-brands fa-youtube"></i>
-                            </div>
-
-                        </div>
-
-
-
-                    </div>
-
-                </div>
+  <header class="header ">
+    <div class="contact-info ">
+      <div class="container text-center">
+        <div class="row text-white align-items-center ">
+          <div class="col-auto ">
+            <div class="left-side-info  py-2">
+            <div class="row">
+              <div class="phone-info col-auto d-flex align-items-center ">
+                <i class="fa-solid fa-phone-volume fa-sm pe-2" style="color: #ffd25d;"></i>
+                <span> (00) 875 784 5682</span>
+              </div>
+              <div class="email-info col-auto d-flex align-items-center border-start ps-3">
+                <i class="fa-solid fa-envelope fa-sm pe-2" style="color: #ffd25d;"></i>
+                <span> pacargoifo@gmail.com</span>
+              </div>
+              <div class="location-info col-auto d-flex align-items-center border-start ps-3">
+                <i class="fa-solid fa-location-dot fa-sm pe-2" style="color: #ffd25d;"></i>
+                <span>238, Arimantab, Moska - USA</span>
+              </div>
             </div>
+          </div>
+          </div>
+          <div class="col-auto ms-auto">
+            <div class="right-side-info  py-2 px-2 h-100">
+            <div class="row align-items-start ">
+              <div class="col">
+                <a href="#"><i class="fa-brands fa-facebook-f fa-sm" style="color: #17254e;"></i></a>
+              </div>
+              <div class="col">
+                <a href="#"> <i class="fa-brands fa-linkedin-in fa-sm" style="color: #17254e;"></i></a>
+              </div>
+              <div class="col">
+                <a href="#"> <i class="fa-brands fa-instagram fa-sm" style="color: #17254e;"></i></a>
+              </div>
+              <div class="col">
+                <a href="#"><i class="fa-brands fa-youtube fa-sm" style="color: #17254e;"></i></a>
+              </div>
+            </div>
+          </div>
+          </div>
+          
         </div>
-    </header> -->
-    <!-- Bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-        crossorigin="anonymous"></script>
+      </div>
+    </div>
+
+    <nav class="navbar navbar-expand-lg bg-white py-3">
+      <div class="container">
+        <a class="navbar-brand pe-5" href="#"><img src="./assets/img/logo/logo.webp" /></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto ps-5 mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active  p-2 mb-2" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="#">About Us</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Courses</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Pages</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Blog</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact</a>
+            </li>
+
+          </ul>
+          <form class="create-btn d-flex" role="search">
+            <button type="submit" class="btn btn-primary d-flex align-items-center  rounded-pill p-3">
+              <span >Create Account</span>
+            </button>
+          </form>
+        </div>
+      </div>
+    </nav>
+
+  </header>
+
+  <!-- Bootstrap -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
