creat categories section

--- a/index.html
+++ b/index.html
@@ -29,41 +29,41 @@
         <div class="row text-white align-items-center ">
           <div class="col-auto ">
             <div class="left-side-info  py-2">
-            <div class="row">
-              <div class="phone-info col-auto d-flex align-items-center ">
-                <i class="fa-solid fa-phone-volume fa-sm pe-2" style="color: #ffd25d;"></i>
-                <span> (00) 875 784 5682</span>
-              </div>
-              <div class="email-info col-auto d-flex align-items-center border-start ps-3">
-                <i class="fa-solid fa-envelope fa-sm pe-2" style="color: #ffd25d;"></i>
-                <span> pacargoifo@gmail.com</span>
-              </div>
-              <div class="location-info col-auto d-flex align-items-center border-start ps-3">
-                <i class="fa-solid fa-location-dot fa-sm pe-2" style="color: #ffd25d;"></i>
-                <span>238, Arimantab, Moska - USA</span>
+              <div class="row">
+                <div class="phone-info col-auto d-flex align-items-center ">
+                  <i class="fa-solid fa-phone-volume fa-sm pe-2" style="color: #ffd25d;"></i>
+                  <span> (00) 875 784 5682</span>
+                </div>
+                <div class="email-info col-auto d-flex align-items-center border-start ps-3">
+                  <i class="fa-solid fa-envelope fa-sm pe-2" style="color: #ffd25d;"></i>
+                  <span> pacargoifo@gmail.com</span>
+                </div>
+                <div class="location-info col-auto d-flex align-items-center border-start ps-3">
+                  <i class="fa-solid fa-location-dot fa-sm pe-2" style="color: #ffd25d;"></i>
+                  <span>238, Arimantab, Moska - USA</span>
+                </div>
               </div>
             </div>
-          </div>
           </div>
           <div class="col-auto ms-auto">
             <div class="right-side-info  py-2 px-2 h-100">
-            <div class="row align-items-start ">
-              <div class="col">
-                <a href="#"><i class="fa-brands fa-facebook-f fa-sm" style="color: #17254e;"></i></a>
-              </div>
-              <div class="col">
-                <a href="#"> <i class="fa-brands fa-linkedin-in fa-sm" style="color: #17254e;"></i></a>
-              </div>
-              <div class="col">
-                <a href="#"> <i class="fa-brands fa-instagram fa-sm" style="color: #17254e;"></i></a>
-              </div>
-              <div class="col">
-                <a href="#"><i class="fa-brands fa-youtube fa-sm" style="color: #17254e;"></i></a>
+              <div class="row align-items-start ">
+                <div class="col">
+                  <a href="#"><i class="fa-brands fa-facebook-f fa-sm" style="color: #17254e;"></i></a>
+                </div>
+                <div class="col">
+                  <a href="#"> <i class="fa-brands fa-linkedin-in fa-sm" style="color: #17254e;"></i></a>
+                </div>
+                <div class="col">
+                  <a href="#"> <i class="fa-brands fa-instagram fa-sm" style="color: #17254e;"></i></a>
+                </div>
+                <div class="col">
+                  <a href="#"><i class="fa-brands fa-youtube fa-sm" style="color: #17254e;"></i></a>
+                </div>
               </div>
             </div>
           </div>
-          </div>
-          
+
         </div>
       </div>
     </div>
@@ -99,7 +99,7 @@
           </ul>
           <form class="create-btn d-flex" role="search">
             <button type="submit" class="btn btn-primary d-flex align-items-center  rounded-pill p-3">
-              <span >Create Account</span>
+              <span>Create Account</span>
             </button>
           </form>
         </div>
@@ -107,7 +107,60 @@
     </nav>
 
   </header>
+  <main>
+    <section class="categories">
+      <div class="container text-center ">
+        <h2>Browse By Categories</h2>
+        <div class="row align-items-center py-2">
+          <div class=" category  cat-1 btn d-flex align-items-center flex-grow-1">
+            <img src="./assets/img/cat/cat-1.svg" />
+            <span>Business Management</span>
+          </div>
 
+          <div class=" category  cat-2 btn d-flex align-items-center flex-grow-1">
+            <img src="./assets/img/cat/cat-2.svg" />
+            <span>Arts & Design</span>
+          </div>
+
+          <div class=" category  cat-3  btn d-flex align-items-center flex-grow-1">
+            <img src="./assets/img/cat/cat-3.svg" />
+            <span>Personal Development</span>
+          </div>
+
+          <div class=" category  cat-4  btn d-flex align-items-center flex-grow-1">
+            <img src="./assets/img/cat/cat-4.svg" />
+            <span>UI/UX Design</span>
+          </div>
+
+          <div class=" category  cat-5  btn d-flex align-items-center flex-grow-1">
+            <img src="./assets/img/cat/cat-5.svg" />
+            <span>Graphic Design</span>
+          </div>
+
+          <div class=" category  cat-6  btn d-flex align-items-center flex-grow-1">
+            <img src="./assets/img/cat/cat-6.svg" />
+            <span>Digital Marketing</span>
+          </div>
+
+           <div class=" category  cat-7  btn d-flex align-items-center flex-grow-1">
+            <img src="./assets/img/cat/cat-7.svg" />
+            <span>Exclusive man</span>
+          </div>
+
+           <div class=" category  cat-8  btn d-flex align-items-center flex-grow-1">
+            <img src="./assets/img/cat/cat-8.svg" />
+            <span>Product Design</span>
+          </div>
+
+           <div class=" category  cat-9  btn d-flex align-items-center flex-grow-1">
+            <img src="./assets/img/cat/cat-9.svg" />
+            <span>Video & Photography</span>
+          </div>
+
+        </div>
+      </div>
+    </section>
+  </main>
   <!-- Bootstrap -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
