updated courses section

--- a/index.html
+++ b/index.html
@@ -164,12 +164,12 @@
     <section class="courses">
       <div class="container   py-5">
         <div class="course-header pb-5">
-          <p>Top Popular Course</p>
-          <div class=" d-flex justify-content-between ">
-            <h2>Edunity Course studentcan join with us.</h2>
+          <span class="course-h py-2 px-3" >Top Popular Course</span>
+          <div class=" course-header-b d-flex justify-content-between py-4">
+            <h2>Edunity Course Student Can Join With Us.</h2>
              <form class="enroll-btn d-flex" role="search">
                     <button type="submit" class="btn btn-primary d-flex align-items-center  rounded-pill px-4 py-3">
-                      <span>Enroll</span>
+                      <span>Load More Course</span>
                       <i class="fa-solid fa-arrow-right fa-sm ps-4"></i>
                     </button>
                   </form>
@@ -197,14 +197,14 @@
 
               </div>
               <h4 class="card-text pb-4">It Statistics Data Science And Business Analysis</h4>
-              <div class="course-details d-flex justify-content-between  p-2">
-                <div><img src="./assets/img/courses/lesson.svg" />
+               <div class="course-details d-flex justify-content-between  p-2">
+                <div class=" course-detail"><img src="./assets/img/courses/lesson.svg" />
                   <span>Lesson 10</span>
                 </div>
-                <div><img src="./assets/img/courses/time.svg" />
+                <div class=" course-detail"><img src="./assets/img/courses/time.svg" />
                   <span>19h 30m</span>
                 </div>
-                <div><img src="./assets/img/courses/student.svg" />
+                <div class=" course-detail"><img src="./assets/img/courses/student.svg" />
                   <span>Students 20+</span>
                 </div>
               </div>
@@ -224,6 +224,7 @@
                 </div>
               </div>
 
+            
             </div>
 
           </div>
