--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-  <header class="header ">
+  <header class="header pB-5">
     <div class="contact-info ">
       <div class="container text-center">
         <div class="row text-white align-items-center ">
@@ -108,10 +108,10 @@
 
   </header>
   <main>
-    <section class="hero p-4">
+    <section class="hero py-5">
       <div class="container">
         <div class="heros d-flex justify-content-between">
-          <div class="hero-left-side d-flex flex-column  gap-3">
+          <div class="hero-left-side d-flex justify-content-center flex-column  gap-3">
             <span>Welcome Edunity online courses</span>
             <h1>Achieving Your Dreams Through Education</h1>
             <p>We are experienced in educationl platform and skilled strategies for the success of our online learning.
@@ -130,8 +130,9 @@
       </div>
     </section>
 
-    <section class="categories">
-      <div class="container text-center py-5">
+    <section class="categories py-5">
+      <div class="container text-center ">
+        <span class="categories-h py-2 px-3">CATEGORIES</span>
         <h2>Browse By Categories</h2>
         <div class="row align-items-center py-2">
           <div class=" category  cat-1 btn d-flex align-items-center flex-grow-1">
@@ -183,8 +184,8 @@
       </div>
     </section>
 
-    <section class="courses">
-      <div class="container   py-5">
+    <section class="courses py-5">
+      <div class="container">
         <div class="course-header pb-5">
           <span class="course-h py-2 px-3">Top Popular Course</span>
           <div class=" course-header-b d-flex justify-content-between py-4">
@@ -521,6 +522,16 @@
 
 
         </div>
+      </div>
+    </section>
+
+    <section class="banner py-5">
+      <div class="container">
+        <div class="banner-content d-flex justify-content-center flex-column gap-3 pt-5">
+      <span>Join Our New Session</span>
+      <h3>Call To Enroll Your Child</h3>
+      <h3>(+91)958423452</h3>
+      </div>
       </div>
     </section>
   </main>
