create about us sec

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       <div class="container text-center ">
         <span class="categories-h py-2 px-3">CATEGORIES</span>
         <h2>Browse By Categories</h2>
-        <div class="row align-items-center py-2">
+        <div class="row align-items-center py-5">
           <div class=" category  cat-1 btn d-flex align-items-center flex-grow-1">
             <img src="./assets/img/cat/cat-1.svg" />
             <span>Business Management</span>
@@ -528,11 +528,66 @@
     <section class="banner py-5">
       <div class="container">
         <div class="banner-content d-flex justify-content-center flex-column gap-3 pt-5">
-      <span>Join Our New Session</span>
-      <h3>Call To Enroll Your Child</h3>
-      <h3>(+91)958423452</h3>
+          <span>Join Our New Session</span>
+          <h3>Call To Enroll Your Child</h3>
+          <h3>(+91)958423452</h3>
+        </div>
       </div>
+    </section>
+
+    <section class="about py-5">
+      <div class="container">
+        <div class="aboutUs d-flex flex-row justify-content-center align-items-center gap-5">
+
+          <div class="about-left-side d-flex flex-column  gap-4">
+            <div>
+              <img class="imgb" src="./assets/img/aboutUs/pic5.webp" />
+            </div>
+            <div class="top-side d-flex flex-row gap-4">
+              <div class="left-side">
+                <img src="./assets/img/aboutUs/pic1.webp" />
+              </div>
+              <div class="right-side ">
+                <img class="imgt" src="./assets/img/aboutUs/pic2.webp" />
+                <img class="imgb" src="./assets/img/aboutUs/pic3.webp" />
+              </div>
+            </div>
+            <div class="bottom-side">
+              <img src="./assets/img/aboutUs/pic4.webp" />
+            </div>
+          </div>
+          <div class="about-right-side">
+            <span class="about-h px-3 py-2">OUR ABOUT US</span>
+            <div class="d-flex flex-column gap-3">
+              <h2 class="pt-4">Learn & Grow your Skills From Anywhere</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris..</p>
+              <div class="d-flex flex-row gap-2">
+                <div class="left-side">
+                  <h3>FlEXIBLE CLASSNAMEES</h3>
+                  <p>Suspendisse ultrice gravida dictum
+                    fusce placerat ultricies integer quis
+                    auctor elit sed vulputate mi sit.</p>
+                </div>
+                <div class="right-side">
+                  <h3>FlEXIBLE CLASSNAMEES</h3>
+                  <p>Suspendisse ultrice gravida dictum
+                    fusce placerat ultricies integer quis
+                    auctor elit sed vulputate mi sit.</p>
+                </div>
+              </div>
+              <form class="Load-AboutUs-btn d-flex" role="search">
+                <button type="submit" class="btn btn-primary d-flex align-items-center  rounded-pill px-4 py-3">
+                  <span>Load More</span>
+                  <i class="fa-solid fa-arrow-right fa-sm ps-4"></i>
+                </button>
+              </form>
+            </div>
+          </div>
+        </div>
       </div>
+
     </section>
   </main>
   <!-- Bootstrap -->
