--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
 
     <section class="about py-5">
       <div class="container">
-        <div class="aboutUs d-flex flex-row justify-content-center align-items-center gap-5">
+        <div class="aboutUs d-flex flex-row justify-content-center align-items-center gap-0 gap-lg-5">
 
           <div class="about-left-side d-flex flex-column  gap-4">
             <div>
