--- a/index.html
+++ b/index.html
@@ -589,9 +589,68 @@
         </div>
       </div>
     </section>
-
-    
   </main>
+  <footer class="footer py-5">
+    <div class="container">
+      <div class=" footer-content d-flex flex-row ">
+        <div class="social pe-5">
+          <img class="img pb-4" src="./assets/img/logo/logoFooter.svg" />
+          <p class="p pb-4 d-flex flex-column">Interdum velit laoreet id donec ultrices
+            <span>tincidunt arcu. Tincidunt tortor aliquam nulla
+            facilisi cras </span>fermentum odio eu.</p>
+            <div class="social-icons d-flex flex-row gap-2">
+              <a class="icon" href="#"> <i class="fa-brands fa-facebook-f fa-sm d-flex align-items-center justify-content-center" style="color: #704fe6;"></i></a>
+              <a class="icon" href="#"> <i class="fa-brands fa-instagram fa-sm d-flex align-items-center justify-content-center" style="color: #704fe6;"></i></a>
+              <a class="icon" href="#"> <i class="fa-brands fa-pinterest-p fa-sm d-flex align-items-center justify-content-center" style="color: #704fe6;"></i></a>
+              <a class="icon" href="#">  <i class="fa-brands fa-twitter fa-sm d-flex align-items-center justify-content-center" style="color: #704fe6;"></i></a>
+            </div>
+
+        </div>
+        <div class="lists d-flex flex-row ">
+        <div class="serv-list">
+          <h5 class="pb-2" >Our Services:</h5>
+          <ul class="service-list d-flex flex-column gap-2">
+            <li>Web Development</li>
+            <li>UI/UX Design</li>
+            <li>Management</li>
+            <li>Digital Marketing</li>
+            <li>Blog News</li>
+          </ul>
+
+        </div>
+        <div class="quick-links">
+           <h5 class="pb-2">Quick Links:</h5>
+          <ul class="links-list  d-flex flex-column gap-2"">
+            <li>Templates</li>
+            <li>Blog And Article</li>
+            <li>Integrations</li>
+            <li>Webinars</li>
+            <li>Privacy & Policy</li>
+          </ul>
+
+
+        </div>
+       
+        <div class="gallery">
+          <h5 class="pb-2">Gallery</h5>
+          <div class=" gallery-img d-flex flex-column gap-2">
+          <div class="top-gallery d-flex flex-row gap-2">
+            <img src="./assets/img/footer/gall1.svg" />
+            <img src="./assets/img/footer/gall2.svg" />
+            <img src="./assets/img/footer/gall3.svg" />
+          </div>
+          <div class="bottom-gallery  d-flex flex-row gap-2">
+            <img src="./assets/img/footer/gall4.svg" />
+            <img src="./assets/img/footer/gall5.svg" />
+            <img src="./assets/img/footer/gall6.svg" />
+          </div>
+          </div>
+        </div>
+         </div>
+
+      </div>
+    </div>
+  </footer>
   <!-- Bootstrap -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
