--- a/index.html
+++ b/index.html
@@ -589,38 +589,70 @@
         </div>
       </div>
     </section>
+
+    <section class="newsLater">
+      <div class="container">
+        <div class="newsLater-form d-flex  align-items-center justify-content-center">
+          <div class=" left-newsLater align-items-center justify-content-center">
+            <h1>Join Our Newsletter</h1>
+            <p>Subscribe our newsletter to get our latest update & news.</p>
+          </div>
+          <div class="right-newsLater align-items-center justify-content-center">
+            <form>
+              <div class="email-form mb-3 email-form   d-flex  gap-lg-0 gap-sm-2  pe-4 align-items-center justify-content-center">
+                <div>
+                  <input type="email" placeholder="Enter your email:" class="form-control p-4 " id="inputEmail1"
+                    aria-describedby="emailHelp">
+                </div>
+                <button type="submit" class="btn btn-primary px-4 py-2 ">Subscribe Now</button>
+              </div>
+
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
   <footer class="footer py-5">
     <div class="container">
-      <div class=" footer-content d-flex flex-row ">
+      <div class=" footer-content d-flex ">
         <div class="social pe-5">
           <img class="img pb-4" src="./assets/img/logo/logoFooter.svg" />
           <p class="p pb-4 d-flex flex-column">Interdum velit laoreet id donec ultrices
             <span>tincidunt arcu. Tincidunt tortor aliquam nulla
-            facilisi cras </span>fermentum odio eu.</p>
-            <div class="social-icons d-flex flex-row gap-2">
-              <a class="icon" href="#"> <i class="fa-brands fa-facebook-f fa-sm d-flex align-items-center justify-content-center" style="color: #704fe6;"></i></a>
-              <a class="icon" href="#"> <i class="fa-brands fa-instagram fa-sm d-flex align-items-center justify-content-center" style="color: #704fe6;"></i></a>
-              <a class="icon" href="#"> <i class="fa-brands fa-pinterest-p fa-sm d-flex align-items-center justify-content-center" style="color: #704fe6;"></i></a>
-              <a class="icon" href="#">  <i class="fa-brands fa-twitter fa-sm d-flex align-items-center justify-content-center" style="color: #704fe6;"></i></a>
-            </div>
+              facilisi cras </span>fermentum odio eu.
+          </p>
+          <div class="social-icons d-flex flex-row gap-2">
+            <a class="icon" href="#"> <i
+                class="fa-brands fa-facebook-f fa-sm d-flex align-items-center justify-content-center"
+                style="color: #704fe6;"></i></a>
+            <a class="icon" href="#"> <i
+                class="fa-brands fa-instagram fa-sm d-flex align-items-center justify-content-center"
+                style="color: #704fe6;"></i></a>
+            <a class="icon" href="#"> <i
+                class="fa-brands fa-pinterest-p fa-sm d-flex align-items-center justify-content-center"
+                style="color: #704fe6;"></i></a>
+            <a class="icon" href="#"> <i
+                class="fa-brands fa-twitter fa-sm d-flex align-items-center justify-content-center"
+                style="color: #704fe6;"></i></a>
+          </div>
 
         </div>
-        <div class="lists d-flex flex-row ">
-        <div class="serv-list">
-          <h5 class="pb-2" >Our Services:</h5>
-          <ul class="service-list d-flex flex-column gap-2">
-            <li>Web Development</li>
-            <li>UI/UX Design</li>
-            <li>Management</li>
-            <li>Digital Marketing</li>
-            <li>Blog News</li>
-          </ul>
+        <div class="lists d-flex  ">
+          <div class="serv-list">
+            <h5 class="pb-2">Our Services:</h5>
+            <ul class="service-list d-flex flex-column gap-2">
+              <li>Web Development</li>
+              <li>UI/UX Design</li>
+              <li>Management</li>
+              <li>Digital Marketing</li>
+              <li>Blog News</li>
+            </ul>
 
-        </div>
-        <div class="quick-links">
-           <h5 class="pb-2">Quick Links:</h5>
-          <ul class="links-list  d-flex flex-column gap-2"">
+          </div>
+          <div class="quick-links">
+            <h5 class="pb-2">Quick Links:</h5>
+            <ul class="links-list  d-flex flex-column gap-2"">
             <li>Templates</li>
             <li>Blog And Article</li>
             <li>Integrations</li>
@@ -631,22 +663,22 @@
 
         </div>
        
-        <div class="gallery">
-          <h5 class="pb-2">Gallery</h5>
-          <div class=" gallery-img d-flex flex-column gap-2">
-          <div class="top-gallery d-flex flex-row gap-2">
-            <img src="./assets/img/footer/gall1.svg" />
-            <img src="./assets/img/footer/gall2.svg" />
-            <img src="./assets/img/footer/gall3.svg" />
-          </div>
-          <div class="bottom-gallery  d-flex flex-row gap-2">
-            <img src="./assets/img/footer/gall4.svg" />
-            <img src="./assets/img/footer/gall5.svg" />
-            <img src="./assets/img/footer/gall6.svg" />
-          </div>
+        <div class=" gallery">
+              <h5 class="pb-2">Gallery</h5>
+              <div class=" gallery-img d-flex flex-column gap-2">
+                <div class="top-gallery d-flex  gap-2">
+                  <img src="./assets/img/footer/gall1.svg" />
+                  <img src="./assets/img/footer/gall2.svg" />
+                  <img src="./assets/img/footer/gall3.svg" />
+                </div>
+                <div class="bottom-gallery  d-flex  gap-2">
+                  <img src="./assets/img/footer/gall4.svg" />
+                  <img src="./assets/img/footer/gall5.svg" />
+                  <img src="./assets/img/footer/gall6.svg" />
+                </div>
+              </div>
           </div>
         </div>
-         </div>
 
       </div>
     </div>
