update features section

--- a/index.html
+++ b/index.html
@@ -590,6 +590,87 @@
       </div>
     </section>
 
+    <section class="features">
+      <div class="container d-flex flex-row">
+
+        <div class="left-side">
+          <div class="top-side d-flex flex-column gap-3">
+            <div class="features-h d-flex flex-row justify-content-between">
+              <span class="py-2 px-3">WHY CHOOSE US</span>
+              <img src="./assets/img/features/features-h.svg" />
+            </div>
+
+            <h2 class="title">A Community Of Life Long Learners </h2>
+
+            <p class="p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+              veniam, quis nostrud exercitation ullamco laboris..</p>
+          </div>
+          <div class="bottom-side row flex-grow-1  align-items-start">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title d-flex align-items-center justify-content-start mb-3"><img class="pe-2"
+                    src="./assets/img/features/Symbol.svg" /> World className Trainers</h5>
+
+                <p class="card-text mb-0">Gravida dictum fusce</p>
+                <p class="card-text  mb-0">placerat ultricies integer</p>
+
+
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title d-flex align-items-center justify-content-start mb-3"><img class="pe-2"
+                    src="./assets/img/features/Symbol.svg" /> World className Trainers</h5>
+
+                <p class="card-text mb-0">Gravida dictum fusce</p>
+                <p class="card-text  mb-0">placerat ultricies integer</p>
+
+
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title d-flex align-items-center justify-content-start mb-3"><img class="pe-2"
+                    src="./assets/img/features/Symbol.svg" /> World className Trainers</h5>
+
+                <p class="card-text mb-0">Gravida dictum fusce</p>
+                <p class="card-text  mb-0">placerat ultricies integer</p>
+
+
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title d-flex align-items-center justify-content-start mb-3"><img class="pe-2"
+                    src="./assets/img/features/Symbol.svg" /> World className Trainers</h5>
+
+                <p class="card-text mb-0">Gravida dictum fusce</p>
+                <p class="card-text  mb-0">placerat ultricies integer</p>
+
+
+              </div>
+            </div>
+
+
+
+          </div>
+        </div>
+
+        <div class="right-side position-relative">
+          <img class="border" src="./assets/img/features/Border.webp" />
+
+          <img class="left-top-image position-absolute top-0 start-0 " src="./assets/img/features/left-top-image.webp" />
+          <img class="right-bottom-image position-absolute bottom-0 end-0" src="./assets/img/features/right-bottom-image.webp" />
+          <img class="right-top-image position-absolute  " src="./assets/img/features/right-top-image.webp" />
+          <div  class="p-1 bg-white position-absolute top-50 start-50 translate-middle">
+           <img class="student-image " src="./assets/img/features/student-image.webp" /> 
+          </div>
+         
+        </div>
+
+      </div>
+    </section>
     <section class="newsLater">
       <div class="container">
         <div class="newsLater-form d-flex  align-items-center justify-content-center">
@@ -599,7 +680,8 @@
           </div>
           <div class="right-newsLater align-items-center justify-content-center">
             <form>
-              <div class="email-form mb-3 email-form   d-flex  gap-lg-0 gap-sm-2  pe-4 align-items-center justify-content-center">
+              <div
+                class="email-form mb-3 email-form   d-flex  gap-lg-0 gap-sm-2  pe-4 align-items-center justify-content-center">
                 <div>
                   <input type="email" placeholder="Enter your email:" class="form-control p-4 " id="inputEmail1"
                     aria-describedby="emailHelp">
