create popular sec

--- a/index.html
+++ b/index.html
@@ -660,15 +660,111 @@
         <div class="right-side position-relative">
           <img class="border" src="./assets/img/features/Border.webp" />
 
-          <img class="left-top-image position-absolute top-0 start-0 " src="./assets/img/features/left-top-image.webp" />
-          <img class="right-bottom-image position-absolute bottom-0 end-0" src="./assets/img/features/right-bottom-image.webp" />
+          <img class="left-top-image position-absolute top-0 start-0 "
+            src="./assets/img/features/left-top-image.webp" />
+          <img class="right-bottom-image position-absolute bottom-0 end-0"
+            src="./assets/img/features/right-bottom-image.webp" />
           <img class="right-top-image position-absolute  " src="./assets/img/features/right-top-image.webp" />
-          <div  class="p-1 bg-white position-absolute top-50 start-50 translate-middle">
-           <img class="student-image " src="./assets/img/features/student-image.webp" /> 
+          <div class="p-1 bg-white position-absolute top-50 start-50 translate-middle">
+            <img class="student-image " src="./assets/img/features/student-image.webp" />
           </div>
-         
+
         </div>
 
+      </div>
+    </section>
+
+    <section class="popular py-5">
+      <div class="container">
+        <div class="popular-header pb-5">
+          <span class="popular-h py-2 px-3">BLOG POST</span>
+          <div class=" popular-header-b d-flex justify-content-between py-4">
+            <h2>Most Popular Post.</h2>
+            <form class="load-btn d-flex" role="search">
+              <button type="submit" class="btn btn-primary d-flex align-items-center  rounded-pill px-4 py-3">
+                <span>All Blog Post</span>
+                <i class="fa-solid fa-arrow-right fa-sm ps-4"></i>
+              </button>
+            </form>
+          </div>
+        </div>
+        <div class="blogs row align-items-center ">
+          <div class="card -flex align-items-center flex-grow-1" style="width: 18rem;">
+            <img src="./assets/img/popular/pic1.webp" class="card-img-top p-2" alt="...">
+            <div class="card-body">
+              <div class="blog-info d-flex ">
+                <div >
+                  <img src="./assets/img/popular/date.svg" />
+                  <span>14 June 2023</span>
+                </div>
+                <div>
+                  <img src="./assets/img/popular/comment.svg" />
+                  <span>Comment (06)</span>
+                </div>
+
+              </div>
+              <p class="card-text">velit esse cillum dolore eu fugiat nulla
+                pariatur. Excepteur sint occaecat
+                cupidatat</p>
+                <form class="load-btn d-flex" role="search">
+              <button type="submit" class="btn btn-primary d-flex align-items-center  rounded-pill px-2 py-2">
+                <span>read more</span>
+                <i class="fa-solid fa-arrow-right fa-sm ps-4"></i>
+              </button>
+            </form>
+            </div>
+          </div>
+          <div class="card -flex align-items-center flex-grow-1" style="width: 18rem;">
+            <img src="./assets/img/popular/pic2.webp" class="card-img-top p-2" alt="...">
+            <div class="card-body">
+              <div class="blog-info d-flex ">
+                <div >
+                  <img src="./assets/img/popular/date.svg" />
+                  <span>14 June 2023</span>
+                </div>
+                <div>
+                  <img src="./assets/img/popular/comment.svg" />
+                  <span>Comment (06)</span>
+                </div>
+
+              </div>
+              <p class="card-text">velit esse cillum dolore eu fugiat nulla
+                pariatur. Excepteur sint occaecat
+                cupidatat</p>
+                <form class="load-btn d-flex" role="search">
+              <button type="submit" class="btn btn-primary d-flex align-items-center  rounded-pill px-2 py-2">
+                <span>read more</span>
+                <i class="fa-solid fa-arrow-right fa-sm ps-4"></i>
+              </button>
+            </form>
+            </div>
+          </div>
+          <div class="card -flex align-items-center flex-grow-1" style="width: 18rem;">
+            <img src="./assets/img/popular/pic3.webp" class="card-img-top p-2" alt="...">
+            <div class="card-body">
+              <div class="blog-info d-flex ">
+                <div >
+                  <img src="./assets/img/popular/date.svg" />
+                  <span>14 June 2023</span>
+                </div>
+                <div>
+                  <img src="./assets/img/popular/comment.svg" />
+                  <span>Comment (06)</span>
+                </div>
+
+              </div>
+              <p class="card-text">velit esse cillum dolore eu fugiat nulla
+                pariatur. Excepteur sint occaecat
+                cupidatat</p>
+                <form class="load-btn d-flex" role="search">
+              <button type="submit" class="btn btn-primary d-flex align-items-center  rounded-pill px-2 py-2">
+                <span>read more</span>
+                <i class="fa-solid fa-arrow-right fa-sm ps-4"></i>
+              </button>
+            </form>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
     <section class="newsLater">
